--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /node_modules
 /NODE_PASSPORT_LOGIN/node_modules
-/NODE_PASSPORT_LOGIN/config/connection-password.json
+/NODE_PASSPORT_LOGIN/config/MyData.js
